--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
+URL: https://github.com/SimonCoulombe/pkgsimon
+BugReports: https://github.com/SimonCoulombe/pkgsimon/issues
