--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(get_xgboost_fold_pred_model)
 export(my_compute_gam_model)
 export(my_compute_xgboost_model)
 export(my_get_optimal_number_of_iteration)
+export(plot_align_grid)
 export(theme_dviz)
 export(theme_dviz_grid)
 export(theme_dviz_half_open)
