--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,13 @@ export(get_double_lift_chart_data)
 export(get_gam_fold_pred_model)
 export(get_gam_formula)
 export(get_lift_chart_data)
+export(get_partial_dependence_xgb)
 export(get_xgboost_fold_pred_model)
 export(my_compute_gam_model)
 export(my_compute_xgboost_model)
 export(my_get_optimal_number_of_iteration)
 export(plot_align_grid)
+export(remove_outliers)
 export(theme_dviz)
 export(theme_dviz_grid)
 export(theme_dviz_half_open)
