ayoye il faut mettre juste un espace avant @export sinon ca exporte pas..

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(get_gam_fold_pred_model)
 export(get_gam_formula)
 export(get_lift_chart_data)
 export(get_partial_dependence_xgb)
+export(get_partial_dependence_xgb_2d)
 export(get_xgboost_fold_pred_model)
 export(my_compute_gam_model)
 export(my_compute_xgboost_model)
