--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ LazyData: true
 RoxygenNote: 6.1.1
 URL: https://github.com/SimonCoulombe/pkgsimon
 BugReports: https://github.com/SimonCoulombe/pkgsimon/issues
+Imports: 
+    dplyr
