--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_equal_weight_group)
 export(df_cutoff)
 export(df_line45)
 export(disloc)
+export(disloc_buckets)
 export(get_double_lift_chart_data)
 export(get_gam_fold_pred_model)
 export(get_gam_formula)
@@ -11,11 +12,13 @@ export(get_lift_chart_data)
 export(get_partial_dependence_xgb)
 export(get_partial_dependence_xgb_2d)
 export(get_xgboost_fold_pred_model)
+export(load_latest)
 export(my_compute_gam_model)
 export(my_compute_xgboost_model)
 export(my_get_optimal_number_of_iteration)
 export(plot_align_grid)
 export(remove_outliers)
+export(save_with_date)
 export(theme_dviz)
 export(theme_dviz_grid)
 export(theme_dviz_half_open)
