--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,4 +14,4 @@ RoxygenNote: 6.1.1
 URL: https://github.com/SimonCoulombe/pkgsimon
 BugReports: https://github.com/SimonCoulombe/pkgsimon/issues
 Imports: 
-    dplyr
+    dplyr, scales
